fixed text wrap

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,7 @@ body,
 :root {
   height: 100%;
 }
+
+.contain-word {
+  overflow-wrap: break-word;
+}
